--- a/Project Templates/Application Plug-in/Xcode Plugin.xctemplate/TemplateInfo.plist
+++ b/Project Templates/Application Plug-in/Xcode Plugin.xctemplate/TemplateInfo.plist
@@ -76,6 +76,8 @@
 &lt;true/&gt;
 &lt;key&gt;DVTPlugInCompatibilityUUIDs&lt;/key&gt;
 &lt;array&gt;
+&lt;string&gt;DF11C142-1584-4A99-87AC-1925D5F5652A&lt;/string&gt;
+&lt;string&gt;1637F4D5-0B27-416B-A78D-498965D64877&lt;/string&gt;
 &lt;string&gt;C4A681B0-4A26-480E-93EC-1218098B9AA0&lt;/string&gt;
 &lt;string&gt;F41BD31E-2683-44B8-AE7F-5F09E919790E&lt;/string&gt;
 &lt;string&gt;AD68E85B-441B-4301-B564-A45E4919A6AD&lt;/string&gt;
