Add Xcode9.1 uuid

--- a/Project Templates/Application Plug-in/Xcode Plugin.xctemplate/TemplateInfo.plist
+++ b/Project Templates/Application Plug-in/Xcode Plugin.xctemplate/TemplateInfo.plist
@@ -76,6 +76,7 @@
 &lt;true/&gt;
 &lt;key&gt;DVTPlugInCompatibilityUUIDs&lt;/key&gt;
 &lt;array&gt;
+&lt;string&gt;C3998872-68CC-42C2-847C-B44D96AB2691&lt;/string&gt;
 &lt;string&gt;DF11C142-1584-4A99-87AC-1925D5F5652A&lt;/string&gt;
 &lt;string&gt;1637F4D5-0B27-416B-A78D-498965D64877&lt;/string&gt;
 &lt;string&gt;C4A681B0-4A26-480E-93EC-1218098B9AA0&lt;/string&gt;
